# operational

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS  Readme.md  operational.cabal
.github/workflows/: build.yml
doc/: Documentation.md  Readme.md  design.md  proofs.md  tutorial-changes.md
doc/examples/: BreadthFirstParsing.hs  ListT.hs  LogicT.hs  PoorMansConcurrency.hs  Readme.md  TicTacToe.hs  WebSessionState.lhs
docs/examples/: LogicT.hs  State.hs
src/Control/Monad/: Operational.hs
