Name:               operational
Version:            0.2.3.3
Synopsis:           Implementation of difficult monads made easy
                    with operational semantics.
Description:
  This library makes it easy to implement monads with tricky control flow.
  .
  This is useful for: writing web applications in a sequential style, programming games with a uniform interface for human and AI players and easy replay capababilities, implementing fast parser monads, designing monadic DSLs, etc.
  .
  See the project homepage <http://haskell.org/haskellwiki/Operational> for a more detailed introduction and features.
  .
  Related packages: MonadPrompt <http://hackage.haskell.org/package/MonadPrompt>.

Category:           Control, Monads
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2010-2013
Homepage:           http://haskell.org/haskellwiki/Operational
Stability:          Provisional

build-type:         Simple
cabal-version:      >= 1.6
extra-source-files: CHANGELOG
                    doc/*.md
                    doc/examples/*.hs
                    doc/examples/*.lhs
                    doc/examples/*.md

flag buildExamples
    description: Build example executables.
    default:     True
 
source-repository head
    type:           git
    location:       git://github.com/HeinrichApfelmus/operational.git

Library
    hs-source-dirs:     src
    build-depends:      base == 4.* , mtl >= 1.1 && < 2.4.0
    ghc-options:        -Wall
    extensions:         GADTs, Rank2Types, ScopedTypeVariables,
                        UndecidableInstances,
                        MultiParamTypeClasses, FlexibleInstances
    exposed-modules:    Control.Monad.Operational

Executable operational-TicTacToe
    if flag(buildExamples)
        build-depends:  random == 1.*
        cpp-options: -DbuildExamples
    else
        buildable: False
    main-is:            doc/examples/TicTacToe.hs
    hs-source-dirs:     src, .
    other-modules:      Control.Monad.Operational

