Name:               operational
Version:            0.2.3.4
Synopsis:           Implementation of difficult monads made easy
                    with operational semantics.
Description:
  This library makes it easy to implement monads with tricky control flow.
  .
  This is useful for: writing web applications in a sequential style, programming games with a uniform interface for human and AI players and easy replay capababilities, implementing fast parser monads, designing monadic DSLs, etc.
  .
  See the project homepage <http://wiki.haskell.org/Operational> for a more detailed introduction and features.
  .
  Related packages:
  .
  * MonadPrompt — <http://hackage.haskell.org/package/MonadPrompt>
  .
  * free — <http://hackage.haskell.org/package/free>
  .
  * free-operational — <http://hackage.haskell.org/package/free-operational>

Category:           Control, Monads
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2010-2013
Homepage:           http://wiki.haskell.org/Operational
Stability:          Provisional

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md
                    doc/*.md
                    doc/examples/*.hs
                    doc/examples/*.lhs
                    doc/examples/*.md

flag buildExamples
    description: Build example executables.
    default:     True
    manual:      True

source-repository head
    type:           git
    location:       git://github.com/HeinrichApfelmus/operational.git

Library
    default-language:   Haskell2010
    other-extensions:   ExistentialQuantification
                        FlexibleInstances
                        GADTSyntax
                        MultiParamTypeClasses
                        Rank2Types
                        ScopedTypeVariables
                        UndecidableInstances

    hs-source-dirs:     src
    exposed-modules:    Control.Monad.Operational

    build-depends:      base >= 4.4 && < 5, mtl >= 1.1 && < 2.3.0
    ghc-options:        -Wall

Executable operational-TicTacToe
    if !flag(buildExamples)
        buildable: False

    default-language:   Haskell2010
    other-extensions:   GADTs
                        Rank2Types

    hs-source-dirs:     doc/examples
    main-is:            TicTacToe.hs

    build-depends:      operational, base, mtl, random == 1.*
