Name:               operational
Version:            0.2.4.2
Synopsis:           Implementation of difficult monads made easy
                    with operational semantics.
Description:
  This library makes it easy to implement monads with tricky control flow.
  .
  This is useful for: writing web applications in a sequential style, programming games with a uniform interface for human and AI players and easy replay capababilities, implementing fast parser monads, designing monadic DSLs, etc.
  .
  Related packages:
  .
  * MonadPrompt — <http://hackage.haskell.org/package/MonadPrompt>
  .
  * free — <http://hackage.haskell.org/package/free>
  .
  * free-operational — <http://hackage.haskell.org/package/free-operational>

Category:           Control, Monads
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2010-2023
Homepage:           https://github.com/HeinrichApfelmus/operational
Stability:          Provisional

build-type:         Simple
cabal-version:      >= 1.10
tested-with:         GHC == 9.4.4
                   , GHC == 9.2.5
                   , GHC == 8.10.7
extra-source-files: CHANGELOG.md
                    Readme.md
                    doc/*.md
                    doc/examples/*.hs
                    doc/examples/*.lhs
                    doc/examples/*.md

flag buildExamples
    description: Build example executables.
    default:     True
    manual:      True

source-repository head
    type:           git
    location:       https://github.com/HeinrichApfelmus/operational.git

Library
    default-language:   Haskell2010
    other-extensions:   ExistentialQuantification
                        FlexibleInstances
                        GADTSyntax
                        MultiParamTypeClasses
                        Rank2Types
                        ScopedTypeVariables
                        UndecidableInstances

    hs-source-dirs:     src
    exposed-modules:    Control.Monad.Operational

    build-depends:      base >= 4.8 && < 5
                      , mtl >= 1.1 && < 2.4
                      , transformers >=0.5.6 && <0.7
    ghc-options:        -Wall

Executable operational-TicTacToe
    if !flag(buildExamples)
        buildable: False

    default-language:   Haskell2010
    other-extensions:   GADTs
                        Rank2Types

    hs-source-dirs:     doc/examples
    main-is:            TicTacToe.hs

    build-depends:      operational, base, mtl, random == 1.*
